test/fail/entityvoidtype.app
// Type not defined

application test

section datamodel

  entity User {
    authoredPapers :: Void
  }
